# rust-os

./: .gitignore  Cargo.toml  Makefile  build-image.sh  dump.sh
.cargo/: config.toml
bootloader/arch/x86_64/: boot.asm  long_mode_init.asm
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/gdt/: mod.rs
src/interrupts/: cpu_flags.rs  hardware.rs  idt.rs  mod.rs  page_fault.rs
src/virtual_memory/: frame.rs  mod.rs  page_table.rs
tests/: basic_boot.rs  stack_overflow.rs
