[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33
test-timeout = 300

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.15.0"
uart_16550 = "0.3.0"
log = "0.4.21"
bit_field = "0.10.2"
bitflags = "2.4.2"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"

[[test]]
name = "stack_overflow"
harness = false
